# fitcheck

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
aegis/: graph.py
aegis/edges/: __init__.py  budget.py  eval.py  retry.py
aegis/executors/: modal_runner.py
aegis/nodes/: remediate.py
aegis/profilers/: __init__.py  cost.py
data/: sample.jsonl
docs/plans/: 2025-02-12-aegis-ml-implementation.md  2026-02-13-aegis-preflight-engine-design.md
fitcheck/: __init__.py  cli.py  solver.py
fitcheck/datasets/: analyzer.py
fitcheck/hardware/: pricing.py  registry.py
fitcheck/hub/: resolver.py
fitcheck/models/: __init__.py  profiles.py  results.py
fitcheck/profilers/: sanity.py
fitcheck/profilers/vram/: components.py  engine.py
fitcheck/profilers/vram/families/: base.py  gemma.py  llama.py  moe.py
fitcheck/report/: formatter.py
tests/: test_graph.py  test_ui.py
tests/edges/: __init__.py  test_budget.py  test_eval.py  test_retry.py
tests/executors/: test_modal.py
tests/fitcheck/: test_cli.py  test_solver.py
tests/fitcheck/datasets/: test_analyzer.py
tests/fitcheck/hardware/: test_pricing.py  test_registry.py
tests/fitcheck/hub/: test_resolver.py
tests/fitcheck/profilers/: test_components.py  test_estimator.py  test_gemma_family.py  test_llama_family.py  test_moe_family.py  test_sanity.py
tests/nodes/: test_remediate.py
tests/profilers/: __init__.py  test_cost.py
ui/: streamlit_app.py
